微信公众号服务器-body数据的加解密 { 1.代码的整合 2.body数据的加解密 3.消息类型的处理 }

--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,11 @@
 			<artifactId>dom4j</artifactId>
 			<version>1.6</version>
 		</dependency>
-
+		<!-- https://mvnrepository.com/artifact/commons-codec/commons-codec -->
+		<dependency>
+			<groupId>commons-codec</groupId>
+			<artifactId>commons-codec</artifactId>
+			<version>1.9</version>
+		</dependency>
 	</dependencies>
 </project>
