--- a/src/main/resources/wechatConfigInfo.properties
+++ b/src/main/resources/wechatConfigInfo.properties
@@ -5,6 +5,6 @@ appSecret=338b417ce51eaaf3dcf08f7f979c3397
 #token
 token=token
 #encodingAESKey
-encodingAESKey=
+encodingAESKey=abcdefghijklmnopqrstuvwxyz0123456789ABCDEFG
 #access_token_url
 accessTokenUrl=https://api.weixin.qq.com/cgi-bin/token?grant_type=client_credential&appid=%s&secret=%s
