微信公众号服务器-实体类与XML的转换 { 1.使用XStream工具， 	实体类与XML的转换，覆写方法实现CDATA的添加 2.Menu菜单的实现，Menu的JSON结构的构建 3.bug修复，msg的处理实例 4.//TODO 自定义菜单的获取与变更 		 素材管理接口的实现 		 关键字回复和客服接口 }

--- a/pom.xml
+++ b/pom.xml
@@ -31,5 +31,13 @@
 			<artifactId>commons-httpclient</artifactId>
 			<version>3.1</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/xstream/xstream -->
+		<dependency>
+			<groupId>xstream</groupId>
+			<artifactId>xstream</artifactId>
+			<version>1.2.2</version>
+		</dependency>
 	</dependencies>
+
+
 </project>
