微信公众号服务器-根据用户信息进行页面跳转 { 1.授权域名的设置及跳转url的设置(servlet地址) 2.http请求用户信息并保存到数据库 3.页面跳转传值，例：request.getRequestDispatcher("xxxx.jsp").forward(req, resp);//xxxx.jsp在WEB-INF下 4.DB部分表的建立DDL参照db_wechatserver.sql 5.部分类、方法、文件名称变更 }

--- a/src/main/resources/MySql.cfg.properties
+++ b/src/main/resources/MySql.cfg.properties
@@ -1,7 +1,7 @@
 #driver
 jdbc.driver=com.mysql.jdbc.Driver
 #url
-jdbc.url=jdbc:mysql://server.natappfree.cc:46483/db_wechatserver?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+jdbc.url=jdbc:mysql://server.natappfree.cc:44024/db_wechatserver?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC&allowMultiQueries=true
 #username
 jdbc.username=root
 #password
